Fixed text overflow issue

--- a/src/app/rectangle-component/rectangle-component.component.scss
+++ b/src/app/rectangle-component/rectangle-component.component.scss
@@ -56,4 +56,11 @@
 
 .textDiv {
     margin-top: 20%;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.textDiv:hover {
+    overflow: visible; 
 }
